--- a/ajex/views/index.html
+++ b/ajex/views/index.html
@@ -12,13 +12,10 @@
     <form action="" method="post" name="formPost" class="formPost" id="formCss" enctype="application/x-www-form-urlencoded">
         {% csrf_token %}
         <h3 id="formTitle">Add your excel or csv file in this button below:</h3>
-        
         <label for="inputFile" class="inputFile">
-            <input type="file" name="fileSheet" id="fileSheet" accept=".xlsx,.csv">
-        </label>
-        <label for="optionSelect">
-            <input type="radio" name="optionSelect" id="" value=".csv">csv 
-            <input type="radio" name="optionSelect" id="" value=".xlsx">excel
+            <input type="file" name="fileSheet" id="styleSheet" accept=".xlsx,.csv">
+            <input type="radio" name="optionSelect" id="" value=".csv">format: csv 
+            <input type="radio" name="optionSelect" id="" value=".xlsx">format: excel
         </label>
         <p></p>
         <input type="submit" value="Enviar">
