--- a/ajex/views/index.html
+++ b/ajex/views/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 id="titleApp">Welcome Ajex!</h1>
-    <form action="" method="post" name="formPost" class="formPost" id="formCss" enctype="application/x-www-form-urlencoded">
+    <form action="" method="POST" name="formPost" class="formPost" id="formCss" enctype="multipart/form-data">
         {% csrf_token %}
         <h3 id="formTitle">Add your excel or csv file in this button below:</h3>
         <label for="inputFile" class="inputFile">
