--- a/ajex/views/index.html
+++ b/ajex/views/index.html
@@ -14,6 +14,7 @@
         <h3 id="formTitle">Add your excel or csv file in this button below:</h3>
         <label for="inputFile" class="inputFile">
             <input type="file" name="fileSheet" id="fileSheet" accept=".xlsx,.csv">
+            <input type="hidden" name="nameSheet" id="nameSheet">
             <input type="radio" name="optionSelect" id="" value=".csv">format: csv 
             <input type="radio" name="optionSelect" id="" value=".xlsx">format: excel
         </label>
