--- a/ajex/views/static/css/style.css
+++ b/ajex/views/static/css/style.css
@@ -26,3 +26,17 @@ body {
     text-align: center;
     cursor: pointer;
 }
+#progress-container {
+    width: 100%;
+    background-color: #e0e0e0;
+    border-radius: 5px;
+    margin-top: 20px;
+    height: 20px;
+}
+
+#progress-bar {
+    width: 0%;
+    height: 100%;
+    background-color: #4caf50;
+    border-radius: 5px;
+}
