--- a/ajex/views/index.html
+++ b/ajex/views/index.html
@@ -15,8 +15,11 @@
         <label for="inputFile" class="inputFile">
             <input type="file" name="fileSheet" id="fileSheet" accept=".xlsx,.csv">
             <input type="hidden" name="nameSheet" id="nameSheet">
-            <div id="progress-container" style="display: none;">
-                <div id="progress-bar" style="width: 0%; background-color: green; height: 20px;"></div>
+            <div id="loading_overlay">
+                <div class="loading_content">
+                  <img src="{% static 'img/loading.gif' %}" alt="Carregando...">
+                  <p>Wait, we're suing...</p>
+                </div>
             </div>
         </label>
         <p></p>
