mod: modificado toda arquitetura do sistema, fazendo funcionar os templates e agora trabalhando na api.

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
             <div class="hero-content">
                 <h1 class="hero-title">Clean Data, Clear Insights</h1>
                 <p class="hero-subtitle">Transform your datasets with Ajex’s automated cleaning and validation, delivering analysis-ready data in seconds.</p>
-                <a href="/pages/models" class="hero-cta">Get Started Now</a>
+                <a href="templates/models" class="hero-cta">Get Started Now</a>
             </div>
             <div class="hero-image">
                 <img src="{% static 'images/pexels-goumbik-577195.jpg' %}" alt="Data Visualization Dashboard">
