--- a/templates/index.html
+++ b/templates/index.html
@@ -12,14 +12,8 @@
     <header>
         <nav class="navbar">
             <div class="nav-links" style="--i: 1;">
-                <a href="models" style="--i: 1;">Models</a>
-                <a href="#about" style="--i: 2;">About Us</a>
-                <a href="#why-ajex" style="--i: 3;">Why Ajex</a>
+                <a href="templates/models" style="--i: 1;">Models</a>
                 <a href="#docs" style="--i: 4;">Docs</a>
-            </div>
-            <div class="search-container">
-                <i class="fas fa-search search-icon"></i>
-                <input type="text" class="search-input" placeholder="Search content...">
             </div>
             <div class="hamburger">
                 <i class="fas fa-bars"></i>
