refactor!: mudança estrutural no projeto

--- a/templates/models-ready.html
+++ b/templates/models-ready.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <h1>Select your model ready for use</h1>
+    <form action="v1/models/RemoveNaN" method="post"></form>
+    <input type="file" name="file" id="file">
+    <input type="submit" value="OK">
 </body>
 </html>
