feat: está limpando planilhas conforme criado, situação que está sendo trabalhada agora, tratamento de erros, não está sendo tratado corretamente.

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
             <div class="hero-content">
                 <h1 class="hero-title">Dados Limpos, Insights Claros</h1>
                 <p class="hero-subtitle">Transforme seus conjuntos de dados com a limpeza e validação automatizada do Ajex, entregando dados prontos para análise em segundos.</p>
-                <a href="templates/models" class="hero-cta">Comece Agora</a>
+                <a href="{% url 'models' %}" class="hero-cta">Comece Agora</a>
             </div>
             <div class="hero-image">
                 <img src="{% static 'images/pexels-goumbik-577195.jpg' %}" alt="Painel de Visualização de Dados">
